# Run4Office

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  checkpoint.txt  docker-compose.yml  main.py  pyproject.toml  requirements.txt  urls.txt
RAG/: graph.py  graph_state.py
RAG/agents/: contextualize.py  decider.py  generate.py
RAG/nodes/: contextualize_query.py  extracter_queries.py  generate.py  retriever.py
RAG/tools/: test.py  vecterstore_retriever.py
data_processor/: dataTemplate.py  llmPrompts.py  llmPrompts_old.py  merge.py  processor.py  util.py
experiments/: additional_cleaning_tests.ipynb  clean_html_tests.ipynb  data_processor.ipynb  db_tester.py  get_url_test.py  llmPrompts.py  tavily_search.ipynb  url_filter.ipynb
shared_data/structured_data_csv/: Anchorage_Assembly_District_6_Seat_K.csv  City_Council_of_San_Jose.csv  City_Manager_of_San_Jose.csv  Maine.csv  Mayor_of_Anchorage.csv  Mayor_of_Augusta.csv  Mayor_of_Austin.csv  Mayor_of_Bakersfield.csv  Mayor_of_Baltimore.csv  Mayor_of_Fort_Wayne.csv  Mayor_of_Las_Vegas.csv  Texas.csv
unstructured_data/: ballotpedia.org_List_of_current_mayors_of_the_top_100_cities_in_the_United_States__Fort_Wayne,_Indiana.txt_unstructured.txt  ballotpedia.org_List_of_current_mayors_of_the_top_100_cities_in_the_United_States__List_of_current_mayors_of_the_top_100_cities_in_the_United_States.txt_unstructured.txt
url_filter/: evaluate_relevance.py  score_and_filter.py  test.py
url_filter_and_extraction/: evaluate_relevance.py  extraction.py  score_and_filter.py  test.py  utils.py
vector_db/: chroma.py
web_crawler_and_scraper/: additional_cleaning.py  advanced_url_filter.py  checkpoint.txt  clean_html.py  crawl_n_scrape.py  crawl_n_scrape_playwright.py  description_generator.py  format_files.py  get_url.py  get_url_test.py  get_urls.py  init.py  initial_url_filter.py  logger.py  main_test.py  scrape_urls.py  utils.py
(+79 files in other folders)
